--- a/app/src/main/res/layout/activity_cliente_consultar.xml
+++ b/app/src/main/res/layout/activity_cliente_consultar.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent">
 <LinearLayout
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:layout_marginTop="20sp"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <LinearLayout
@@ -31,7 +37,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20sp">
+        android:layout_marginTop="10sp">
 
         <Button
             android:layout_width="wrap_content"
@@ -54,8 +60,8 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_marginLeft="10sp"
         android:layout_marginRight="10sp"
         android:layout_marginTop="20sp">
@@ -144,3 +150,4 @@
     </LinearLayout>
 
 </LinearLayout>
+</RelativeLayout>
