--- a/app/src/main/res/layout/activity_encargado_consultar.xml
+++ b/app/src/main/res/layout/activity_encargado_consultar.xml
@@ -44,7 +44,7 @@
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:text="@string/limpiar"
             android:id="@+id/btLimpiarConsultar"
             android:onClick="limpiar"
