--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -7,6 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:scaleX="5"
+    android:scaleY="5"
     tools:context="proyecto1.pdm.fia.ues.sv.valoracionestablecimientos.MenuPrincipalActivity">
 
     <TextView
