--- a/app/src/main/res/layout/activity_tipo_comprobante_menu.xml
+++ b/app/src/main/res/layout/activity_tipo_comprobante_menu.xml
@@ -7,6 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="fia.ues.sv.valoracionestablecimientos.TipoComprobanteMenuActivity">
+    tools:context="proyecto1.pdm.fia.ues.sv.valoracionestablecimientos.TipoComprobanteMenuActivity">
 
 </RelativeLayout>
